test/cases/compile_errors/struct_field_missing_type.zig
const Letter = struct {
    A,
};
export fn entry() void {
    var a = Letter { .A = {} };
    _ = a;
}

// error
// backend=stage2
// target=native
//
// :2:5: error: struct field missing type
